# autonomous-data-agency

./: .env.example  .gitignore  Dockerfile  GETTING_STARTED.md  INSTRUCOES_CORRECAO_CI.md  MAIN_BRANCH_FIX_conftest.py  README.md  cli.py  demo_complete_workflow.py  demo_full_system.py  demo_integrated_v5.py  demo_multi_team.py  demo_v6_modules.py  docker-compose.yml  list_models.py  main.py  pyproject.toml  requirements.txt  setup.py  test_knowledge_system.py
.github/workflows/: ci.yml
api/: main.py  routes.py
autonomous_data_agency/: __init__.py
autonomous_data_agency/agents/: __init__.py  base_agent.py  master_agent.py  team_agent.py
autonomous_data_agency/core/: __init__.py  agency.py  state.py
autonomous_data_agency/utils/: __init__.py  config.py  logger.py
config/: __init__.py  governance_policies.yaml  llm_config.py
core/: __init__.py  agency_orchestrator.py  base_team.py  business_glossary.py  data_catalog.py  data_quality.py  governance_policies.py  governance_team.py  hallucination_detector.py  integrated_workflow.py  lineage_tracker.py  observability_team.py  pm_orchestrator.py  process_control.py  project_generator.py  project_manager.py  quarantine_manager.py  task_orchestrator.py  team_communication.py  teams_factory.py  validation_workflow.py
core/knowledge/: __init__.py  knowledge_base.py  project_memory.py  rag_engine.py
data/memory/: project_memory.db
data/vectordb/: chroma.sqlite3
examples/: basic_example.py  llm_example.py
knowledge/architecture/: best_practices.yaml
knowledge/data_engineering/: best_practices.yaml
knowledge/data_science/: best_practices.yaml
knowledge/devops/: best_practices.yaml
knowledge/governance/: best_practices.yaml
knowledge/observability/: best_practices.yaml
knowledge/product_owner/: best_practices.yaml
knowledge/qa/: best_practices.yaml
knowledge/shared/: general_standards.yaml
teams/: __init__.py
teams/architecture/: __init__.py  team.py
teams/backend/: __init__.py  team.py
teams/data_analytics/: __init__.py  team.py
teams/data_engineering/: __init__.py  team.py
teams/data_science/: __init__.py  team.py
teams/database/: __init__.py  team.py
teams/devops/: __init__.py  team.py
teams/frontend/: __init__.py  team.py
teams/fullstack/: __init__.py  team.py
teams/mobile/: __init__.py  team.py
teams/product_owner/: __init__.py  agents.py  team.py
teams/project_manager/: __init__.py  team.py
teams/qa/: __init__.py  team.py
teams/security/: __init__.py  team.py
teams/ux_ui/: __init__.py  team.py
tests/: conftest.py  test_agency.py  test_base_agent.py  test_core.py  test_master_agent.py  test_team_agent.py
web/: package-lock.json
web/src/: App.tsx  index.css  useWebSocket.ts
web/src/components/: ClientChat.tsx  EventLog.tsx  ProcessingStatus.tsx  ProjectFeed.tsx  ResultSummary.tsx  TeamComms.tsx
